--- a/index.html
+++ b/index.html
@@ -3,33 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Earthquake Finder</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
         <h1>Earthquake Finder</h1>
-        <p>Search recent earthquakes using the USGS Earthquake API.</p>
+        <p>Search recent earthquakes using the <a href="https://earthquake.usgs.gov/fdsnws/event/1/" target="_blank" rel="noopener noreferrer">USGS Earthquake API.</a></p>
     </header>
 
     <main>
         <section id="formSection">
             <form id="quakeForm">
-                <div class="form-group">
-                    <label for="startDate">Start Date:</label>
-                    <input type="date" id="startDate" name="startDate">
-                    <span class="error-msg" id="dateError"></span>
-                </div>
-
-                <div class="form-group">
-                    <label for="minMag">Minimum Magnitude:</label>
-                    <input type="number" id="minMag" name="minMag" step="0.1" value="3">
-                    <span class="error-msg" id="magError"></span>
-                </div>
-
-                <div class="form-group">
-                    <label for="limit">Max Results:</label>
-                    <input type="number" id="limit" name="limit" min="1" max="100" value="20">
-                </div>
 
                 <div class="form-group">
                     <label for="continent">Continent:</label>
@@ -47,15 +31,31 @@
                     <span class="error-msg" id="continentError"></span>
                 </div>
 
+                <div class="form-group">
+                    <label for="startDate">Start Date:</label>
+                    <input type="date" id="startDate" name="startDate">
+                    <span class="error-msg" id="dateError"></span>
+                </div>
 
-                <button type="submit" id="searchBtn">Search</button>
+                <div class="form-group">
+                    <label for="minMag">Magnitude:</label>
+                    <input type="number" id="minMag" name="minMag" step="0.1" value="0">
+                    <span class="error-msg" id="magError"></span>
+                </div>
+
+                <div class="form-group">
+                    <label for="limit">Max Results:</label>
+                    <input type="number" id="limit" name="limit" min="1" max="100" value="10">
+                </div>
+
+                <button type="submit" id="searchButton">Search</button>
             </form>
 
             <p id="statusMsg"></p>
         </section>
 
         <section id="resultsSection">
-            <h2>Results</h2>
+            <h2>Results:</h2>
             <div id="resultsContainer">
                 <!-- Earthquake results will appear here -->
             </div>
